--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="https://legoman8304.github.io/style.css">
+<link rel="stylesheet" type="text/css" href="https://github.com/MrTrollson/My-Project/blob/master/index.md">
