--- a/style.css
+++ b/style.css
@@ -1,1 +1,5 @@
 <link rel="stylesheet" type="text/css" href="https://github.com/MrTrollson/My-Project/blob/master/index.md">
+
+.h1 {
+  color: blue;
+}
