--- a/style.css
+++ b/style.css
@@ -1,1 +1,41 @@
+body {
+    overflow-x: hidden;
+    font-family: 'Poppins', sans-serif;
+}
+
+/*=== LANDING PAGE ===*/
+.landing {
+    text-align: center;
+    text-transform: uppercase;
+    background-image: linear-gradient(90deg, #1DA1F2, #981ceb)
+}
+
+h4 {
+    color: white;
+    font-weight: 200;
+    font-size: 1.6rem;
+    letter-spacing: 0.1rem;
+    padding-top: 7rem;
+}
+
+
+
+
+/*====MEDIA QUERIES====*/
+
+/* Devices under 1199px (xl) */
+@media (max-width: 1199.98px) {
+
+}
+
+/* Devices under 992px (xl) */
+@media (max-width: 991.98px) {
+
+}
+
+/* Devices under 768px (xl) */
+@media (max-width: 767.98px) {
+
+}
+
 
